# lab-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  debug_test_in.lab  entries.lab  pyproject.toml
.github/workflows/: rust.yml
python/lab_rs/: __init__.py
src/: lab_rs.py  lib.rs
tests/: file2.lab  file3.lab  integration_test.rs
