[package]
name = "lab-rs"
description = "rust library for working with .lab-files v1.1"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Triebke"]
repository = "https://github.com/lxtrbk/lab-rs"
license-file = "LICENSE.md"
readme = "README.md"
publish = false
keywords = ["automotive"]
categories = ["parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

# try do let this empty
[dependencies]


